# danny_tries_parquet

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: dataset-gen.cpp  dataset_generator.cpp  dataset_generator.h  gen-dataset.cpp  parquet-test.cpp  write-struct.cpp
src/cpp/obs/: dataset-gen-struct.cpp  dataset-gen.cpp  parquet-test.cpp  struct-test.cpp  write-parquet-file.cpp
src/python/: read-parquet.py  test-parquet.py
